<!--
  Copyright 2020 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">WindowSamples</string>
    <string name="deviceState">Device state</string>
    <string name="fold">Fold</string>
    <string name="legend">Legend:</string>
    <string name="content_title">Content title</string>
    <string name="green_droid">Green droid</string>
    <string name="display_features_config_change">Display features handle config change</string>
    <string name="display_features_no_config_change">Display features no config change</string>
    <string name="display_features_slim_portrait">Display features slim portrait</string>
    <string name="display_features_slim_landscape">Display features slim landscape</string>
    <string name="split_layout">Split layout</string>
    <string name="presentation">Presentation</string>
    <string name="start_presentation">Start presentation</string>
    <string name="stop_presentation">Stop presentation</string>
    <string name="closeToStartPresentationHint">Close the device to start Presentation on
        the outside screen</string>
    <string name="windowManagerDemos">WindowManager Demos</string>
    <string name="hardware_config_select">Hardware configuration to use</string>
    <string name="device_default">Device default</string>
    <string name="short_dimension_fold">Fold in the middle of the window along short
        dimension</string>
    <string name="long_dimension_fold">Fold in the middle of the window along long
        dimension</string>
    <string name="test_activity">Test activity</string>
    <string name="show_all_display_features_config_change_description">Show all display features of the device on the screen and handle config changes</string>
    <string name="show_all_display_features_no_config_change_description">Show all display features of the device on the screen and do not handle config changes.  The activity is recreated instead on rotation or resize</string>
    <string name="show_all_display_features_portrait_slim">Show all display features of the device on the screen with slim portrait window.</string>
    <string name="show_all_display_features_landscape_slim">Show all display features of the device on the screen with slim landscape window.</string>
    <string name="split_layout_demo_description">Demo of a layout that splits the content to sides of a fold or a hinge. If not present or minimal size requirements are not meant, it behave like a FrameLayout.</string>
    <string name="presentation_demo_description">Demo of using Presentation API to show content on secondary display.</string>
    <string name="window_metrics">Window metrics</string>
    <string name="window_metrics_description">Demo of using WindowMetrics API with activity handling rotations.</string>
    <string name="rear_display">Rear Display Mode</string>
    <string name="rear_display_description">Demo of observing to WindowAreaStatus and enabling/disabling RearDisplay mode</string>
    <string name="current_split_attributes">Current SplitAttributes:</string>
    <string name="current_animation_background">Current Animation Background:</string>
    <string name="current_open_animation">Current Open Animation:</string>
    <string name="current_close_animation">Current Close Animation:</string>
    <string name="current_change_animation">Current Change Animation:</string>
    <string name="test_ime">Test IME</string>
    <string name="test_ime_button_clear">Clear Logs</string>
    <string name="test_ime_button_close">Close Test IME</string>
    <string name="window_metrics_ime_hint">Tap to open IME</string>
    <string name="ime">IME</string>
    <string name="ime_demo_description">Demo of using various APIs from within IME.</string>
    <string name="ime_demo_reminder">Reminder: To use the Test IME bundled with this application, remember to enable it in System Settings.</string>
    <string name="ime_button_settings">System IME Settings</string>
    <string name="ime_button_switch_default">Switch default IME</string>
    <string name="install_samples_2">Install window-demos:demo-second-app to launch activities from a different UID.</string>
    <string name="toast_split_not_available">This device does not support Activity Embedding.</string>
    <string name="toast_split_not_support">Please enable PROPERTY_ACTIVITY_EMBEDDING_SPLITS_ENABLED.</string>
    <string name="latest_configuration_title">Latest Configuration</string>
    <string name="application_display_listener_title">Application DisplayListener#onDisplayChanged</string>
    <string name="activity_display_listener_title">Activity DisplayListener#onDisplayChanged</string>
    <string name="application_configuration_title">Application#onConfigurationChanged</string>
    <string name="activity_configuration_title">Activity#onConfigurationChanged</string>
    <string name="window_layout_info_getter_title">WindowInfoTracker#getCurrentWindowLayoutInfo</string>
    <string name="window_layout_info_flow_title">WindowInfoTracker#windowLayoutInfo</string>
    <string name="window_engagement_info_flow_title">WindowInfoTracker#windowEngagementInfo</string>
    <string name="timestamp_title">Timestamp:</string>
    <string name="application_display_rotation_title">Application Display Rotation:</string>
    <string name="activity_display_rotation_title">Activity Display Rotation:</string>
    <string name="application_display_bounds_title">Application Display Bounds:</string>
    <string name="activity_display_bounds_title">Activity Display Bounds:</string>
    <string name="prev_application_display_rotation_title">Previous Application Display Rotation:</string>
    <string name="prev_activity_display_rotation_title">Previous Activity Display Rotation:</string>
    <string name="prev_application_display_bounds_title">Previous Application Display Bounds:</string>
    <string name="prev_activity_display_bounds_title">Previous Activity Display Bounds:</string>
    <string name="window_state_placeholder">N/A</string>
    <string name="split_attributes_calculator_not_supported">SplitAttributesCalculator is not supported!</string>
    <string name="finish_this_activity">Finish this Activity</string>
    <string name="use_default_split_attributes">Use default split attributes</string>
    <string name="use_folding_aware_split_attributes">Show fullscreen in portrait and horizontal split in tabletop</string>
    <string name="use_customized_split_attributes">Use runtime changed split attributes</string>
    <string name="choose_split_type">Choose the split type</string>
    <string name="choose_layout_direction">Choose the layout direction</string>
    <string name="show_placeholder_warning">Placeholder Activity may show (again) because "Use a placeholder for A is checked". Clear the check box to expand Activity A to fill the task by either clicking "FINISH SECONDARY ACTIVITIES".</string>
    <string name="dual_display">Dual Display</string>
    <string name="dual_display_description">Demo of showing content on the rear and internal displays concurrently</string>
    <string name="toast_show_overlay_warning">The device does not support overlay features!</string>
    <string name="overlay_bounds_text">Overlay bounds:</string>
    <string name="width_in_ratio">Width in ratio: </string>
    <string name="height_in_ratio">Height in ratio: </string>
</resources>
