<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2022 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ime_demo_reminder"/>

    <Button
        android:id="@+id/ime_button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ime_button_settings"/>

    <Button
        android:id="@+id/ime_button_switch_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ime_button_switch_default"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/window_metrics_ime_hint"/>

</androidx.appcompat.widget.LinearLayoutCompat>