<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2023 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_split_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Update to the latest configuration. -->
        <androidx.window.demo.coresdk.WindowStateView
            android:id="@+id/latest_update_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/latest_configuration_title"
            app:hidePrevConfig="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#AAAAAA" />

        <!-- Update from Application DisplayListener. -->
        <androidx.window.demo.coresdk.WindowStateView
            android:id="@+id/application_display_listener_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/application_display_listener_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#AAAAAA" />

        <!-- Update from Activity DisplayListener. -->
        <androidx.window.demo.coresdk.WindowStateView
            android:id="@+id/activity_display_listener_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/activity_display_listener_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#AAAAAA" />

        <!-- Update from Application#onConfigurationChanged. -->
        <androidx.window.demo.coresdk.WindowStateView
            android:id="@+id/application_configuration_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/application_configuration_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#AAAAAA" />

        <!-- Update from Activity#onConfigurationChanged. -->
        <androidx.window.demo.coresdk.WindowStateView
            android:id="@+id/activity_configuration_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/activity_configuration_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#AAAAAA" />

        <!-- Update from WindowInfoTracker. -->
        <androidx.window.demo.coresdk.WindowStateView
            android:id="@+id/display_feature_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/display_feature_title"/>

    </LinearLayout>
</ScrollView>