<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2023 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_split_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/activity_pair_split_attributes_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_split_attributes"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#AAAAAA" />

    <TextView
        android:id="@+id/split_type_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/choose_split_type"
        android:visibility="gone"/>
    <Spinner
        android:id="@+id/split_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/layout_direction_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/choose_layout_direction"
        android:visibility="gone"/>
    <Spinner
        android:id="@+id/layout_direction_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/fullscreen_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:text="Toggle fullscreen mode"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#AAAAAA" />
    <TextView
        android:id="@+id/warning_message_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>